# nixosniri

./: .gitignore  MODULAR-README.md  NEOVIM-GUIDE.md  NIXOS-PROJECT-OVERVIEW.md  NIXOS_GITHUB_SYNC.md  README.md  RESTRUCTURING-COMPLETE.md  RESTRUCTURING-PLAN.md  deploy.sh  flake.nix  home.nix
.claude/: context.md
config/fuzzel/: fuzzel.ini
config/niri/: config.kdl
config/waybar/: config-hyprland.jsonc  config.jsonc  style.css
modules/: boot.nix  desktop.nix  home.nix  locale.nix  mounts.nix  networking.nix  nvidia.nix  packages.nix  users.nix
projects/copy_omarchy_menu/: 01-structure.md  02-theme-system.md  03-menu-and-walker.md  04-nixos-setup-plan.md  README.md  SETUP-COMPLETE.md  omarchy-themed-apps.md
projects/settings_app/: Cargo.toml  DESIGN.md  Makefile  README.md  build.rs  build.sh  flake.nix  install-rust.sh  run.sh  shell.nix
projects/settings_app/assets/: hyprland-settings.desktop
projects/settings_app/examples/: config_parsing_comparison.md  no_headerbar_demo.c  no_headerbar_demo.rs
projects/settings_app/src/: app.rs  main.rs  styles.css
projects/settings_app/src/config/: hyprland.rs  mod.rs
projects/settings_app/src/ui/: header.rs  mod.rs  sidebar.rs
projects/settings_app/src/ui/pages/: about.rs  appearance.rs  applications.rs  display.rs  input.rs  keybindings.rs  mod.rs  windows.rs
projects/settings_app/src/utils/: ipc.rs  mod.rs
projects/wonderland-desktop/: Cargo.toml  flake.nix
projects/wonderland-desktop/apps/bar/: Cargo.toml
projects/wonderland-desktop/apps/bar/src/: main.rs
projects/wonderland-desktop/apps/file-manager/: Cargo.toml
projects/wonderland-desktop/apps/file-manager/src/: main.rs
projects/wonderland-desktop/apps/launcher/: Cargo.toml
projects/wonderland-desktop/apps/launcher/src/: main.rs
projects/wonderland-desktop/apps/settings/: Cargo.toml
projects/wonderland-desktop/apps/settings/src/: main.rs
projects/wonderland-desktop/crates/wonderland-audio/: Cargo.toml
projects/wonderland-desktop/crates/wonderland-audio/src/: lib.rs
projects/wonderland-desktop/crates/wonderland-config/: Cargo.toml
projects/wonderland-desktop/crates/wonderland-config/src/: lib.rs
projects/wonderland-desktop/crates/wonderland-hyprland/: Cargo.toml
projects/wonderland-desktop/crates/wonderland-hyprland/src/: lib.rs
projects/wonderland-desktop/crates/wonderland-theme/: Cargo.toml
projects/wonderland-desktop/crates/wonderland-theme/src/: color.rs  iced_theme.rs  lib.rs  loader.rs
scripts/: audio-out-status  mic-status  mic-toggle
