[package]
name = "hyprland-settings"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A modern settings application for Hyprland"
license = "GPL-3.0"
repository = "https://github.com/yourusername/hyprland-settings"

[dependencies]
gtk4 = { version = "0.7", features = ["v4_12"] }
libadwaita = { version = "0.5", features = ["v1_4"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
anyhow = "1.0"
once_cell = "1.19"

# No build dependencies needed for now

[[bin]]
name = "hyprland-settings"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"