[package]
name = "wonderland-launcher"
version.workspace = true
edition.workspace = true

[dependencies]
iced = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wonderland-theme = { workspace = true }
wonderland-hyprland = { workspace = true }
wonderland-config = { workspace = true }
fuzzy-matcher = "0.3"
freedesktop-desktop-entry = "0.5"
