[package]
name = "wonderland-settings"
version.workspace = true
edition.workspace = true

[dependencies]
iced = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wonderland-theme = { workspace = true }
wonderland-hyprland = { workspace = true }
wonderland-audio = { workspace = true }
wonderland-config = { workspace = true }
