[package]
name = "wonderland-theme"
version.workspace = true
edition.workspace = true

[dependencies]
iced = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
cssparser = "0.31"
notify = "6"
tokio = { workspace = true }
